# portfolio-api

./: Cargo.toml  config.example.toml
src/: client.rs  main.rs  modules.rs
src/connectors/: redis_connector.rs
src/modules/: projects.rs
src/src/: config.rs  connectors.rs  main.rs
src/src/modules/: spotify.rs  weather.rs
src/storage/: spotify_token_storage.json
